--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,6 +32,9 @@ website:
           - text: "DataSHIELD (Resources)"
             href: DataSHIELD_workshop_APHRC_resources.Rmd
             icon: link-45deg
+          - text: "dsOMOP Workshop"
+            href: dsomop.Rmd
+            icon: database-fill
       - text: "Schedule"
         href: schedule.qmd
         icon: calendar3
